# VulkanPractice

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  VulkanPractice.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
VulkanPractice/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  VulkanPractice.cpp  VulkanPractice.vcxproj  VulkanPractice.vcxproj.filters
VulkanPractice/include/: VulkanPractice.h
VulkanPractice/include/base/: const.h  vulkan_utils.h  window.h
VulkanPractice/src/: main.cpp
VulkanPractice/src/base/: vulkan_utils.cpp  window.cpp
cmake/: compile_shader.cmake
libs/glfw/: glfw3.lib
